# faculty

second-year/2nd Year 1st Semester CTI RO/ac/: CSuA.docx  Test_AC_Berejnec_Adrian_Daniel.rar  W10_Lab_CA_Verilog_Project.cr.mti  W10_Lab_CA_Verilog_Project.mpf  lab13.txt
second-year/2nd Year 1st Semester CTI RO/ac/Lab 3/: dec_2x_4.v  mux_1s_1b.v  mux_2s_1b.v  mux_3s_1b.v  mux_3s_1b_v2.v
second-year/2nd Year 1st Semester CTI RO/ac/Lab10LFSR/: BIST.v  BIST.v.bak  DFF_AR_SET.v  DFF_AR_SET.v.bak  LFSR.v  LFSR.v.bak  MUL3.v  MUL3.v.bak  SISR.v  SISR.v.bak
second-year/2nd Year 1st Semester CTI RO/ac/Tema AC Metoda Cordic/: Implementare in limbajul C a metodei Cordic.txt  Rezultate Metoda Cordic.txt  Tema S11 Metoda Cordic - Berejnec_Adrian_Daniel.docx
second-year/2nd Year 1st Semester CTI RO/cd/: 193e350f-23d8-4b4f-92c0-f7e98ece89cb.jfif  3320225a-240e-4941-86e0-f36e6a912a6a.jfif  77ae23a1-ab05-43ca-866a-8d64258677ae.jfif  Aplicatia 1 - Berejnec_Adrian_Daniel.docx  Intrebari teorie CD de pe drive.docx  b43e7d75-63ce-4c82-af43-e6122ef04720.jfif  b4466b80-a885-43d0-89c5-5c85fe3118a8.jfif  cd curs pagini referinta.txt  ddcd83d4-d35f-4a3f-ac47-668556e280a7.jfif
second-year/2nd Year 1st Semester CTI RO/sda/CLionProjects/LabSDA/: CMakeLists.txt  Lists.c  TemaOptionala.c  VPLListe.c  VPLrecursivitate.c  agenda.c  angajati.c  aoc1.c  conexiune.c  echipa.c  ex1P1.c  generareCuvinte.c  hartaCulori.c  listeGPS.c  magazine.c  main.c  main2.c  main3.c  multiDepozite.c  practiceLists.c  sortareNeg.c  student.c  test.c  vpl3.c  vpl4.c  zbor.c
(+413 files in other folders)
