cmake_minimum_required(VERSION 3.20)
project(LabSDA C)

set(CMAKE_C_STANDARD 99)

add_executable(LabSDA main.c ex1P1.c)
add_executable(LabSDA_main2 main2.c)
add_executable(LabSDA_main3 main3.c)
add_executable(LabSDA_vpl3 vpl3.c)
add_executable(LabSDA_test test.c)
add_executable(LabSDA_vpl4 vpl4.c)
add_executable(LabSDA_TemaOptionala TemaOptionala.c)
add_executable(LabSDA_aoc1 aoc1.c)
add_executable(LabSDA_VPLListe VPLListe.c)
add_executable(LabSDA_MetodaCordicAC MetodaCordicAC.c)
add_executable(LabSDA_Lists Lists.c)
add_executable(LabSDA_VPLrecursivitate VPLrecursivitate.c)
add_executable(LabSDA_practiceLists practiceLists.c)
add_executable(LabSDA_generareCuvinte generareCuvinte.c)
add_executable(LabSDA_ex1P1 ex1P1.c)
add_executable(LabSDA_sortareNeg sortareNeg.c)
add_executable(LabSDA_multiDepozite multiDepozite.c)
add_executable(LabSDA_hartaCulori hartaCulori.c)
add_executable(LabSDA_magazine magazine.c)
add_executable(LabSDA_agenda agenda.c)
add_executable(LabSDA_angajati angajati.c)
add_executable(LabSDA_listeGPS listeGPS.c)
add_executable(LabSDA_echipa echipa.c)
add_executable(LabSDA_conexiune conexiune.c)
add_executable(LabSDA_student student.c)
add_executable(LabSDA_zbor zbor.c)